@@ -33,9 +33,7 @@ set -ev
 
 cd $HIVEMALL_HOME/spark
 
-export MAVEN_OPTS="-XX:MaxPermSize=256m"
-
-mvn -q scalastyle:check -pl spark-2.1 -am test
+export MAVEN_OPTS="-XX:MaxMetaspaceSize=256m"
 
 # spark-2.2 runs on Java 8+
 if [ ! -z "$(java -version 2>&1 | grep 1.8)" ]; then
